{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 863,
  "lineage": "4d1747a2-4fc1-2ce5-ad36-6aea599d13c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_app_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7620d611d3ceae4",
            "arn": "arn:aws:ec2:us-east-1:503561441432:instance/i-0612988afd6f2d3d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0612988afd6f2d3d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo1_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fbbd0e33388dffa8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbbd0e33388dffa8",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-34-235-121-73.compute-1.amazonaws.com",
            "public_ip": "34.235.121.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c0cb420fe0ad9916",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015e87b1e9045bd39",
            "tags": {
              "Env": "dev",
              "Name": "demo1_app_server1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_app_server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03650d28d6097a4d8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.demo1_primary_db",
            "aws_db_parameter_group.demo1_db_parameter_group",
            "aws_db_subnet_group.demo1_db_subnet_group",
            "aws_key_pair.demo1_ec2_key",
            "aws_network_interface.ec2_nic1_as1",
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_subnet.demo1_private_subnet",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7620d611d3ceae4",
            "arn": "arn:aws:ec2:us-east-1:503561441432:instance/i-0f624001c5323e736",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f624001c5323e736",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo1_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e1736062fbb13df0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1736062fbb13df0",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-98-81-185-89.compute-1.amazonaws.com",
            "public_ip": "98.81.185.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aa0c79c9cee11051",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f8df0df56fee7e6",
            "tags": {
              "Env": "dev",
              "Name": "demo1_web_server1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_web_server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ecf3643da2b81f1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.demo1_primary_db",
            "aws_db_parameter_group.demo1_db_parameter_group",
            "aws_db_subnet_group.demo1_db_subnet_group",
            "aws_instance.demo1_app_server1",
            "aws_key_pair.demo1_ec2_key",
            "aws_network_interface.ec2_nic1_as1",
            "aws_network_interface.ec2_nic1_ws1",
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_subnet.demo1_private_subnet",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:internet-gateway/igw-07fe07dcb2f5f2078",
            "id": "igw-07fe07dcb2f5f2078",
            "owner_id": "503561441432",
            "tags": {
              "Env": "dev",
              "Name": "demo1_igw"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_igw"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo1_private_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:network-acl/acl-0817a04b56271cfd8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0817a04b56271cfd8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 5432
              }
            ],
            "owner_id": "503561441432",
            "subnet_ids": [
              "subnet-0ee3b389ff4b40d3f"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_acl"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:network-acl/acl-0eb00245716ab19ca",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0eb00245716ab19ca",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 5432
              }
            ],
            "owner_id": "503561441432",
            "subnet_ids": [
              "subnet-03eebbc40e37e8694"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_acl"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo1_public_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:network-acl/acl-01e863c7dcae16180",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "id": "acl-01e863c7dcae16180",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "181.51.32.104/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              }
            ],
            "owner_id": "503561441432",
            "subnet_ids": [
              "subnet-05f8df0df56fee7e6"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet1_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet1_acl"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:network-acl/acl-09ec6c2e90d666ba7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "id": "acl-09ec6c2e90d666ba7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "181.51.32.104/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              }
            ],
            "owner_id": "503561441432",
            "subnet_ids": [
              "subnet-015e87b1e9045bd39"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet2_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet2_acl"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo1_private_sub_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00b66a667983d6272",
            "network_acl_id": "acl-0817a04b56271cfd8",
            "subnet_id": "subnet-0ee3b389ff4b40d3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01413136c19f13d54",
            "network_acl_id": "acl-0eb00245716ab19ca",
            "subnet_id": "subnet-03eebbc40e37e8694"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo1_public_sub_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09f9c057cdec6d039",
            "network_acl_id": "acl-01e863c7dcae16180",
            "subnet_id": "subnet-05f8df0df56fee7e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03588f8932d4e5f7d",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "subnet_id": "subnet-015e87b1e9045bd39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2481332277",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0817a04b56271cfd8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3562625941",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eb00245716ab19ca",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_ephemeral_ports_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3669024432",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e863c7dcae16180",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2279513339",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_http_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-436843558",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e863c7dcae16180",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1197995629",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_https_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3349114275",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e863c7dcae16180",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2599497704",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_ssh_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1_181.51.32.104_32",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "181.51.32.104/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2052391277",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e863c7dcae16180",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2_181.51.32.104_32",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "181.51.32.104/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-658195238",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inner_out_pub_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4091107785",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e863c7dcae16180",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-472235148",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_out_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-77870764",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0817a04b56271cfd8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-152103234",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eb00245716ab19ca",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_out_pub_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-941344053",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e863c7dcae16180",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1044548815",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09ec6c2e90d666ba7",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ec2_nic1_as1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:network-interface/eni-0fbbd0e33388dffa8",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d1fa479d51c6c79e",
                "device_index": 0,
                "instance": "i-0dfe2f5ba7a3dfd33"
              }
            ],
            "id": "eni-0fbbd0e33388dffa8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:d6:c4:3f:75:dd",
            "owner_id": "503561441432",
            "private_dns_name": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "private_ip_list": [
              "10.0.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03650d28d6097a4d8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015e87b1e9045bd39",
            "tags": {
              "Name": "ec2_nic1_as1"
            },
            "tags_all": {
              "Name": "ec2_nic1_as1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ec2_nic1_ws1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:network-interface/eni-0e1736062fbb13df0",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c8b092999c862d0e",
                "device_index": 0,
                "instance": "i-0f624001c5323e736"
              }
            ],
            "id": "eni-0e1736062fbb13df0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:f4:d8:3e:ed",
            "owner_id": "503561441432",
            "private_dns_name": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "private_ip_list": [
              "10.0.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06ecf3643da2b81f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f8df0df56fee7e6",
            "tags": {
              "Name": "ec2_nic1_ws1"
            },
            "tags_all": {
              "Name": "ec2_nic1_ws1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_web_server_sg",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07fe07dcb2f5f2078",
            "id": "r-rtb-0d6dfc13d2835f31d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d6dfc13d2835f31d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo1_igw",
            "aws_route_table.demo1_public_rt",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:route-table/rtb-07b670b0168d8c096",
            "id": "rtb-07b670b0168d8c096",
            "owner_id": "503561441432",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:route-table/rtb-073e76281432cef48",
            "id": "rtb-073e76281432cef48",
            "owner_id": "503561441432",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:route-table/rtb-0d6dfc13d2835f31d",
            "id": "rtb-0d6dfc13d2835f31d",
            "owner_id": "503561441432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fe07dcb2f5f2078",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e4b608c86b34c08",
            "route_table_id": "rtb-07b670b0168d8c096",
            "subnet_id": "subnet-0ee3b389ff4b40d3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_private_rt",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e24cd0ba9d97fe",
            "route_table_id": "rtb-073e76281432cef48",
            "subnet_id": "subnet-03eebbc40e37e8694"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_private_rt",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb3774d9e017b67f",
            "route_table_id": "rtb-0d6dfc13d2835f31d",
            "subnet_id": "subnet-05f8df0df56fee7e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_public_rt",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b5575e364c2d3c",
            "route_table_id": "rtb-0d6dfc13d2835f31d",
            "subnet_id": "subnet-015e87b1e9045bd39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_public_rt",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group/sg-03650d28d6097a4d8",
            "description": "Manage inbound and outbound traffic for the app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03650d28d6097a4d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "181.51.32.104/32"
                ],
                "description": "Allow inbound SSH from admins IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound HTTP from admins to access the API endpoints",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ecf3643da2b81f1"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "demo1_app_server_sg",
            "name_prefix": "",
            "owner_id": "503561441432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group/sg-0c187eec927482803",
            "description": "Manage inbound and outbound traffic for the db servers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound db traffic to app servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03650d28d6097a4d8"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c187eec927482803",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound db traffic from app servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03650d28d6097a4d8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "demo1_db_server_sg",
            "name_prefix": "",
            "owner_id": "503561441432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group/sg-06ecf3643da2b81f1",
            "description": "Manage inbound and outbound traffic for the web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ecf3643da2b81f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "181.51.32.104/32"
                ],
                "description": "Allow inbound SSH from admins IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo1_web_server_sg",
            "name_prefix": "",
            "owner_id": "503561441432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:subnet/subnet-0ee3b389ff4b40d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee3b389ff4b40d3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561441432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:subnet/subnet-03eebbc40e37e8694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eebbc40e37e8694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561441432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:subnet/subnet-05f8df0df56fee7e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f8df0df56fee7e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561441432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet1"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:subnet/subnet-015e87b1e9045bd39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015e87b1e9045bd39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561441432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet2"
            },
            "vpc_id": "vpc-02f2c6b64147ed921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:vpc/vpc-02f2c6b64147ed921",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd847d78d107cb07",
            "default_route_table_id": "rtb-0d178fb496515dd6f",
            "default_security_group_id": "sg-0f34fed02e576782b",
            "dhcp_options_id": "dopt-036fa7c0e52e7a12b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f2c6b64147ed921",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d178fb496515dd6f",
            "owner_id": "503561441432",
            "tags": {
              "Env": "dev",
              "Name": "demo1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_db_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-0e6962060092255fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow outbound db traffic to app servers",
            "from_port": 1024,
            "id": "sgr-0e6962060092255fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03650d28d6097a4d8",
            "security_group_id": "sg-0c187eec927482803",
            "security_group_rule_id": "sgr-0e6962060092255fa",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_server_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server_181.51.32.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-09aeee87443ad315f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to anywhere",
            "from_port": -1,
            "id": "sgr-09aeee87443ad315f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03650d28d6097a4d8",
            "security_group_rule_id": "sgr-09aeee87443ad315f",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "web_server_181.51.32.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-008734db1506e6fb0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to anywhere",
            "from_port": -1,
            "id": "sgr-008734db1506e6fb0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06ecf3643da2b81f1",
            "security_group_rule_id": "sgr-008734db1506e6fb0",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_db_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-05883cf523bbcb665",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound db traffic from app servers",
            "from_port": 5432,
            "id": "sgr-05883cf523bbcb665",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03650d28d6097a4d8",
            "security_group_id": "sg-0c187eec927482803",
            "security_group_rule_id": "sgr-05883cf523bbcb665",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_http_app_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-03f684a758037c9f1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from admins to access the API endpoints",
            "from_port": 3000,
            "id": "sgr-03f684a758037c9f1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06ecf3643da2b81f1",
            "security_group_id": "sg-03650d28d6097a4d8",
            "security_group_rule_id": "sgr-03f684a758037c9f1",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-031c9c12b1611100e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-031c9c12b1611100e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03650d28d6097a4d8",
            "security_group_rule_id": "sgr-031c9c12b1611100e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "web_server",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-01abcdfe7ee9e8e29",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-01abcdfe7ee9e8e29",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06ecf3643da2b81f1",
            "security_group_rule_id": "sgr-01abcdfe7ee9e8e29",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_https_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-0b9e79c09d2d12cac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-0b9e79c09d2d12cac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03650d28d6097a4d8",
            "security_group_rule_id": "sgr-0b9e79c09d2d12cac",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "web_server",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-02ab29dd56dd55254",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-02ab29dd56dd55254",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06ecf3643da2b81f1",
            "security_group_rule_id": "sgr-02ab29dd56dd55254",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_ssh_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server_181.51.32.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-01a65e1ed0dc14ccd",
            "cidr_ipv4": "181.51.32.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound SSH from admins IPs",
            "from_port": 22,
            "id": "sgr-01a65e1ed0dc14ccd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03650d28d6097a4d8",
            "security_group_rule_id": "sgr-01a65e1ed0dc14ccd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "web_server_181.51.32.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561441432:security-group-rule/sgr-0164800b667fd4445",
            "cidr_ipv4": "181.51.32.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound SSH from admins IPs",
            "from_port": 22,
            "id": "sgr-0164800b667fd4445",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06ecf3643da2b81f1",
            "security_group_rule_id": "sgr-0164800b667fd4445",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_web_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    }
  ]
}